tests/whiley/valid/test_1369.wyal
type sr7nat is (int n)
where:
    n > 0


assert "assertion failed":
    forall({sr7nat f} x, {sr7nat f} x$1):
        if:
            x == {f: 1}
            x$1 == x{f:=x.f + 1}
        then:
            x$1 == {f: 2}


